tests/fixtures/invalid/block_typedef_alias_out_of_scope.c
typedef int Word;

int main() {
    {
        typedef char Local;
        Local value = 1;
    }

    Local leaked = 2;
    return leaked;
}
